# KIS_Portfolio_MCP

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  NOTICE.md  README.md  SPEC.md  TODO.md  db.py  pyproject.toml  server.py
.agent/skills/kis-architecture-audit/: SKILL.md
.agent/skills/kis-architecture-audit/references/: expected-contracts.md
.agent/skills/kis-architecture-audit/scripts/: check_architecture_contracts.py
.agent/skills/kis-portfolio-ops/: SKILL.md
.agent/skills/kis-portfolio-ops/references/: workflows.md
.agent/skills/kis-warehouse-contract/: SKILL.md
.agent/skills/kis-warehouse-contract/references/: warehouse-contracts.md
.agent/skills/kis-warehouse-contract/scripts/: check_warehouse_contracts.py
.github/workflows/: deploy-cloud-run.yml
docs/: api-capability-map.md  backup.md  data-pipeline.md  deployment.md
docs/examples/: claude_desktop_config.example.json  manual_api_smoke.py
scripts/: backup_motherduck.py  deploy_cloud_run.py  setup.sh  stop_mcp.sh
src/kis_mcp_server/: accounts.py  app.py  auth.py  kis_balance.py  orchestrator.py  remote.py
src/kis_mcp_server/analytics/: bollinger.py  portfolio.py
src/kis_mcp_server/db/: __init__.py  connection.py  repository.py  utils.py
src/kis_portfolio/: __init__.py  account_registry.py  accounts.py  config.py  orchestrator.py  remote.py
src/kis_portfolio/adapters/: __init__.py
src/kis_portfolio/adapters/batch/: __init__.py  cli.py
src/kis_portfolio/adapters/mcp/: __init__.py  server.py
src/kis_portfolio/analytics/: __init__.py  bollinger.py  portfolio.py
src/kis_portfolio/clients/: __init__.py  kis.py
src/kis_portfolio/db/: __init__.py  connection.py  repository.py  schema.py
src/kis_portfolio/services/: __init__.py  account.py  kis_api.py  market_calendar.py  order_history.py  overview.py
tests/: test_account_registry.py  test_accounts.py  test_analytics.py  test_auth.py  test_deploy_cloud_run.py  test_domestic_order_repository.py  test_kis_balance.py  test_market_calendar.py  test_orchestrator.py  test_order_history_batch.py  test_order_history_query.py  test_order_safety.py  test_overview.py  test_package_smoke.py  test_remote_auth.py
