[project]
name = "kis-mcp-server"
version = "0.1.0"
description = "한국투자증권 REST API를 사용한 MCP(Model Context Protocol) 서버"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "migusdn", email = "migusdn@gmail.com" }
]
dependencies = [
    "duckdb>=1.5.2",
    "fastmcp>=2.5.1",
    "httpx>=0.28.1",
    "mcp>=1.9.1",
    "pathlib>=1.0.1",
    "python-dotenv>=1.1.0",
    "starlette>=0.46.1",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
kis-mcp-server = "kis_mcp_server.app:main"
kis-mcp-remote = "kis_mcp_server.remote:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kis_mcp_server"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
